tests/invalid/list_str_wrong_arg_count/main.py
def run_case() -> None:
    xs: list[int] = [1, 2]
    out: str = xs.__str__(42)


if __name__ == "__main__":
    run_case()
